--- a/meals/templates/login/login.html
+++ b/meals/templates/login/login.html
@@ -19,11 +19,7 @@
 
         <h1>Login</h1>
         <div>
-            <form method='POST'> {% csrf_token %} 
-                <div><input type='text' name='username' placeholder='Username' /></div>
-                <div><input type='password' name='password' placeholder='Password' /></div>
-                <div><input type='submit' value='Login' /></div>
-            </form>
+           hola
         </div>
         
         <script src="" async defer></script>
