added auth to frontend, and specific nav menu for auth=true

--- a/frontend-meals/src/components/nav/navbar.style.scss
+++ b/frontend-meals/src/components/nav/navbar.style.scss
@@ -1,17 +1,23 @@
 .nav-container{
     margin-top:20px;
+    width:100%;
 }
 
 .ul-container{
     list-style-type: none;
     display:flex;
     flex-flow:row nowrap;
+    justify-content: flex-end;
 }
 
-
+.auth-link-container{
+    margin:0;
+    display:flex;
+    flex-flow:row nowrap;
+}
 
 .nav-li{
-    padding:15px;
+    padding:10px;
 }
 
 .active-links{
