--- a/frontend-meals/src/App.css
+++ b/frontend-meals/src/App.css
@@ -22,6 +22,38 @@
   color: #61dafb;
 }
 
+.react-calendar {
+  margin: 0 50px;
+  min-width: 200px;
+  width: 20%;
+  padding: 5px;
+  font-size: 0.9rem;
+  box-shadow: 0 3px 5px 1px rgba(0, 0, 0, 0.5);
+}
+.react-calendar__tile:focus {
+  background-color: rgba(6, 59, 58, 0.719);
+}
+
+.calendar-and-preview-container {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 100px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.calendar-wrapper {
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.calendar-col {
+  margin: 0 auto;
+  width: 100%;
+  height: 100px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
