--- a/frontend-meals/src/components/adminDashboard/adminDashboard.scss
+++ b/frontend-meals/src/components/adminDashboard/adminDashboard.scss
@@ -1,69 +1,68 @@
-.dashboard-container{
-    width:100%;
-    display:flex;
+.dashboard-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
 }
 
-.side-bar-container{
-    width:15%;
-    // border:solid 1px black;
+.side-bar-container {
+  flex: 0 0 20%;
+  background-color: #0d0d0d;
+  width:100%;
+
+  // border:solid 1px black;
 }
 
-.calendar-container{
-    margin:20px auto;
+.calendar-container {
+  margin: 20px auto;
 }
 
-.react-calendar{
-    margin:30px auto;
+.react-calendar {
+  margin: 30px auto;
+  background-color: lavender;
 }
 
-.dash-menu-container{
-    margin:20px auto;
-    width:80%;
-    max-width: 200px;
-    background-color: rgba(31, 46, 67, 1);
-    color:white;
-    border-radius: 15px;
-    padding:20px;
-     box-shadow: 2px 1px 9px  #39393b;
-
+.dash-menu-container {
+  margin: 20px auto;
+  width: 80%;
+  max-width: 200px;
+  background-color: transparent;
+  color: white;
+  padding: 20px;
+  box-shadow: 2px 1px 9px #7a7a7a;
 }
 
-.dash-menu-container > ul{
-    list-style-type: none;
-    text-align: center;
-    padding:0;
-
+.dash-menu-container > ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
 }
 
-.dash-menu-container > ul >li{
-    width:100%;
+.dash-menu-container > ul > li {
+  width: 100%;
 }
 
-.content-container{
-    width:85%;
-    flex:85;
-    // border:solid 1px black;
-    padding:10px;
+.content-container {
+  flex: 0 0 70%;
+  padding: 50px;
 }
 
-.admin-form-container{
-    width:95%;
-    margin:20px auto;
-    padding:20px;
-    padding-bottom:80px;
-    background-color: rgba(31, 46, 67, 1);
-    box-shadow: 2px 1px 9px  #39393b;
-    border-radius: 15px;
+.menu-container {
+  width: 95%;
+  margin: 20px auto;
+  padding: 20px;
+  padding-bottom: 80px;
+  background-color: #e6e6fa;
+  box-shadow: 0px 0px 15px #a4a4a4;
+  border-radius: 15px;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width: 800px) {
+  .dashboard-container {
+    flex-flow: column wrap;
+  }
 
- 
-    .dashboard-container{
-        flex-flow:column wrap;
-    }
-
-    .content-container{
-        width:100%;
-    }
+  .content-container {
+    width: 100%;
+  }
 }
