--- a/frontend-meals/src/components/menu/weekyMenuView.scss
+++ b/frontend-meals/src/components/menu/weekyMenuView.scss
@@ -1,9 +1,34 @@
 .day-container{
-    border:solid 1px black;
+    border-radius: 7.5px;
+    box-shadow: inset 1px 0px 8px -1px #c4c1c1;
+    margin:10px auto;
+    padding:5px;
+    background-color: #f7f7f7;
+
+    .date_title{
+        width:80%;
+        border-bottom: 1px solid #477baa;
+        margin:auto;
+        box-shadow:0 9px 10px -8px gray;
+    }
+}
+
+button {
+   border:none;
+   background-color:transparent;
+   outline:none;
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+.diets-imgs {
+  width: 20px;
+  height: 20px;
 }
 
 .serviceType-container{
-    border:solid 1px black;
     padding:10px;
     display:flex;
     flex-direction: column;
@@ -22,13 +47,25 @@
 }
 
 .service-content-container{
-    
+    display:flex;
+    justify-content: center;
+    flex-flow:row wrap;
+
+    .service-render-container{
+        flex:0 0 100%;
+    }
+
+    .service-form-container{
+        flex:0 0 100%;
+        width:100%;
+    }
 }
 .add-meal-btn{
-            color:white;
+            color:rgb(0, 0, 0);
 
             &:hover{
                 cursor: pointer;
-                color:greenyellow;
+                color:rgb(57, 58, 56);
             }
         }
+        
