--- a/frontend-meals/src/components/menu/LunchOrDinnerView/rendermeals.scss
+++ b/frontend-meals/src/components/menu/LunchOrDinnerView/rendermeals.scss
@@ -1,42 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Satisfy&family=Zilla+Slab&display=swap');
-.mealsContainer{
-    width:100%;
-    height:100%;
-    margin:10px 0;
-    padding:2px 0;
-    display:flex;
-    flex-flow:row nowrap;
-    justify-content: space-evenly;
-    box-shadow: 1px 1px 10px -4px #8e8b8b;
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Satisfy&family=Zilla+Slab&display=swap");
+.mealsContainer {
+  width: 100%;
+  height: 100%;
+  margin: 10px 0;
+  padding: 2px 0;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  box-shadow: 1px 1px 10px -4px #8e8b8b;
+  position: relative;
+  border-radius: 3.5px;
+
+  .meal_item_container,
+  .diets_logo_container,
+  .edit-delete-container {
+    margin: auto;
+    flex: 0 0 30%;
+    display: flex;
+    justify-content: center;
     position: relative;
-    border-radius: 3.5px;
+  }
+}
+
+.meal_item_container {
+  flex: 0 0 33%;
+  height: 50px;
+}
+
+.meal-image {
+  position:relative;
+  width:70px;
+  object-fit: contain;
+  padding:2px;
+  transition: all 1s ease-out;
+  
+   cursor: pointer;
+}
+
+.meal-image:hover{
+     z-index:999;
+    transform:scale(3.5) translateX(30px);
     
-
-    .meal_item_container, .diets_logo_container, .edit-delete-container{
-        margin:auto;
-       flex:0 0 30%;
-       display:flex; 
-       justify-content: center;
-       position:relative;
-    }
-
-    .meal_item_container{
-        flex:0 0 33%;
-    }
+   
+    
 }
 
-.meal_items{
-    font-family: 'Zilla Slab', 'cursive';
-    font-size:.9rem;
-    margin:0;
-    padding:0;
+.meal_items {
+  font-family: "Zilla Slab", "cursive";
+  font-size: 0.9rem;
+  margin: auto;
+  padding: 0;
 }
 
-.edit-delete-container{
-    display:flex;
-    justify-content: flex-end;
+.edit-delete-container {
+  display: flex;
+  justify-content: flex-end;
 }
-.edit-del-icon{
-    width:50%;
-    flex:0 0 15%;
+.edit-del-icon {
+  width: 50%;
+  flex: 0 0 15%;
 }
