--- a/frontend-meals/src/components/adminDashboard/adminDashboard.css
+++ b/frontend-meals/src/components/adminDashboard/adminDashboard.css
@@ -58,13 +58,13 @@
 }
 
 .menu-container {
-  width: 95%;
+  width: 80%;
   margin: 20px auto;
-  padding: 20px;
+  padding: 10px;
   padding-bottom: 80px;
   background-color: #e6e6fa;
-  -webkit-box-shadow: 0px 0px 15px #a4a4a4;
-          box-shadow: 0px 0px 15px #a4a4a4;
+  -webkit-box-shadow: 0px 0px 7px #a4a4a4;
+          box-shadow: 0px 0px 7px #a4a4a4;
   border-radius: 15px;
 }
 
@@ -76,7 +76,9 @@
             flex-flow: column wrap;
   }
   .content-container {
-    width: 100%;
+    width: 80%;
+    margin: auto;
+    padding: 0;
   }
 }
 /*# sourceMappingURL=adminDashboard.css.map */
