--- a/frontend-meals/src/components/clientDashboard/clientDashboard.css
+++ b/frontend-meals/src/components/clientDashboard/clientDashboard.css
@@ -32,6 +32,7 @@
 }
 
 .arrow-btns {
-  font-size: 1.2rem;
+  font-size: 1rem;
+  font-weight: 700;
 }
 /*# sourceMappingURL=clientDashboard.css.map */
